<resources>
    <string name="app_name">DeFacto</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="artikel">Artikel</string>
    <string name="forum">Forum</string>
    <string name="profil">Profil</string>
    <string name="search_hint">Apa yang ingin anda cari?</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="register">Register</string>
    <string name="undang_undang">Undang-Undang</string>
    <string name="peraturan_pemerintah">Peraturan Pemerintah</string>
    <string name="peraturan_presiden">Peraturan Presiden</string>
    <string name="keputusan_presiden">Keputusan Presiden</string>
    <string name="judul_data">-</string>
    <string name="jenis_bentuk_peraturan">Jenis/Bentuk Peraturan</string>
    <string name="jenis_peraturan_data">-</string>
    <string name="nomor_peraturan">Nomor Peraturan</string>
    <string name="no_peraturan_data">-</string>
    <string name="tempat_penetapan">Tempat Penetapan</string>
    <string name="tempat_penetapan_data">-</string>
    <string name="tanggal_penetapan">Tanggal Penetapan</string>
    <string name="tgl_penetapan_data">-</string>
    <string name="tanggal_pengundangan">Tanggal Pengundangan</string>
    <string name="tgl_pengundangan_data">-</string>
    <string name="bidang_hukum">Bidang Hukum</string>
    <string name="bidang_hukum_data">-</string>
    <string name="bahasa">Bahasa</string>
    <string name="bahasa_data">-</string>
    <string name="pemrakasra">Pemrakasra</string>
    <string name="pemrakarsa_data">-</string>
    <string name="penandatangan">Penandatangan</string>
    <string name="penandatangan_data">-</string>
    <string name="subjek">Subjek</string>
    <string name="subjek_data">-</string>
    <string name="pdf">PDF</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="nomor">Nomor</string>
    <string name="status">Berlaku</string>
    <string name="judul">Judul</string>
    <string name="tanggal">Tanggal</string>
    <string name="pengarang">Pengarang</string>
    <string name="statistik">Statistik</string>
    <string name="edukasi">Edukasi</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="simplifikasi">Simplifikasi</string>
    <string name="artikel_terkait">Artikel Terkait</string>
    <string name="tersimpan">Tersimpan</string>
</resources>