<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:fontFamily="@font/opensans_bold"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/article"
        android:title="@string/artikel"
        android:fontFamily="@font/opensans_bold"
        android:icon="@drawable/ic_article"/>

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/forum"
        android:title="@string/forum"
        android:fontFamily="@font/opensans_bold"
        android:icon="@drawable/ic_forum"/>

    <item
        android:id="@+id/profile"
        android:title="@string/profil"
        android:fontFamily="@font/opensans_bold"
        android:icon="@drawable/ic_profile"/>
</menu>