<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="12dp"
            android:ems="10"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:hint="@string/nama_lengkap"
            android:inputType="textEmailAddress"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="12dp"
            android:ems="10"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="12dp"
            android:ems="10"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/register"/>
    </LinearLayout>
</LinearLayout>