<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_blue"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/dark_blue_2"
            app:cardCornerRadius="20dp">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:textSize="12sp"
                app:queryBackground="@color/dark_blue_2"
                app:queryHint="@string/search_hint"
                app:searchIcon="@drawable/ic_search"
                app:iconifiedByDefault="false"/>
        </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/feature_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/banner_information"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/undang_undang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginBottom="4dp"
                            app:cardBackgroundColor="@color/dark_blue_2"
                            app:strokeColor="@color/black"
                            app:strokeWidth="0.5dp"
                            app:cardCornerRadius="10dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="8dp"
                                android:src="@drawable/undang_undang_icon" />
                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            style="@style/DashboardTextStyle"
                            android:text="@string/undang_undang"
                            android:textColor="@color/white"
                            android:fontFamily="@font/opensans_light"
                            tools:ignore="SmallSp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/peraturan_pemerintah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginBottom="4dp"
                            app:cardBackgroundColor="@color/dark_blue_2"
                            app:strokeColor="@color/black"
                            app:strokeWidth="0.5dp"
                            app:cardCornerRadius="10dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="8dp"
                                android:src="@drawable/peraturan_pemerintah_icon"/>
                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            style="@style/DashboardTextStyle"
                            android:text="@string/peraturan_pemerintah"
                            android:textColor="@color/white"
                            android:fontFamily="@font/opensans_light"
                            tools:ignore="SmallSp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/peraturan_presiden"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginBottom="4dp"
                            app:cardBackgroundColor="@color/dark_blue_2"
                            app:strokeColor="@color/black"
                            app:strokeWidth="0.5dp"
                            app:cardCornerRadius="10dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="8dp"
                                android:src="@drawable/peraturan_presiden_icon"/>
                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            style="@style/DashboardTextStyle"
                            android:text="@string/peraturan_presiden"
                            android:textColor="@color/white"
                            android:fontFamily="@font/opensans_light"
                            tools:ignore="SmallSp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/keputusan_presiden"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginBottom="4dp"
                            app:cardBackgroundColor="@color/dark_blue_2"
                            app:strokeColor="@color/black"
                            app:strokeWidth="0.5dp"
                            app:cardCornerRadius="10dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="8dp"
                                android:src="@drawable/keputusan_presiden_icon"/>
                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            style="@style/DashboardTextStyle"
                            android:text="@string/keputusan_presiden"
                            android:textColor="@color/white"
                            android:fontFamily="@font/opensans_light"
                            tools:ignore="SmallSp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/statistik"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginBottom="4dp"
                            app:cardBackgroundColor="@color/dark_blue_2"
                            app:strokeColor="@color/black"
                            app:strokeWidth="0.5dp"
                            app:cardCornerRadius="10dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="8dp"
                                android:src="@drawable/statistik_icon"/>
                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            style="@style/DashboardTextStyle"
                            android:text="@string/statistik"
                            android:textColor="@color/white"
                            android:fontFamily="@font/opensans_light"
                            tools:ignore="SmallSp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/simplifikasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginBottom="4dp"
                            app:cardBackgroundColor="@color/dark_blue_2"
                            app:strokeColor="@color/black"
                            app:strokeWidth="0.5dp"
                            app:cardCornerRadius="10dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="8dp"
                                android:src="@drawable/simplifikasi_icon"/>
                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            style="@style/DashboardTextStyle"
                            android:text="@string/simplifikasi"
                            android:textColor="@color/white"
                            android:fontFamily="@font/opensans_light"
                            tools:ignore="SmallSp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/edukasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginBottom="4dp"
                            app:cardBackgroundColor="@color/dark_blue_2"
                            app:strokeColor="@color/black"
                            app:strokeWidth="0.5dp"
                            app:cardCornerRadius="10dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="8dp"
                                android:src="@drawable/education_icon"/>
                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            style="@style/DashboardTextStyle"
                            android:text="@string/edukasi"
                            android:textColor="@color/white"
                            android:fontFamily="@font/opensans_light"
                            tools:ignore="SmallSp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/pengaturan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginBottom="4dp"
                            app:cardBackgroundColor="@color/dark_blue_2"
                            app:strokeColor="@color/black"
                            app:strokeWidth="0.5dp"
                            app:cardCornerRadius="10dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="8dp"
                                android:src="@drawable/pengaturan_icon"/>
                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            style="@style/DashboardTextStyle"
                            android:text="@string/pengaturan"
                            android:textColor="@color/white"
                            android:fontFamily="@font/opensans_light"
                            tools:ignore="SmallSp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="45dp"
                    android:text="@string/artikel_terkait"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="@font/opensans_semibold"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/banner_artikel1"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/banner_artikel2"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/banner_artikel3"/>
            </LinearLayout>
    </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>